Update base JPA